IMPALA-9280: Fix parsing of timestamp with dash before TZH

In ISO SQL datetime format, '-' is both separator character and sign
in TZH token. If the TZH token itself doesn't start with a '+' sign
and the separator sequence contains more than one separators then the
last '-' of the separator sequence is taken as the sign of TZH.

Testing:
* Add test to query_test/test_cast_with_format.py

Change-Id: I24c636e75fd380f6ebd091bcb38bb60a274f0e00
Reviewed-on: http://gerrit.cloudera.org:8080/15130
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>